--- a/css/index.css
+++ b/css/index.css
@@ -6,23 +6,22 @@
 
 body {
     background-image: url(../assets/images/troc.png);
-    background-attachment: fixed;
-    /* background-size: contain; */
     background-repeat: no-repeat;
-    /* background-position: center; */
+    overflow-x: hidden;
 }
 
 .containerAnimation {
     margin: auto;
     text-transform: uppercase;
     text-align: center;
+
     /* justify-content: center; */
     color: #eca43e;
     text-shadow: 2px 2px #0362a2;
     animation: titleAnimation 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) infinite alternate-reverse;
 }
 
-.containerAnimation::first-letter,
+h1::first-letter,
 span {
     color: #ea2630;
     font-size: 150%;
@@ -38,7 +37,7 @@ span {
     }
 
     100% {
-        letter-spacing: 2em;
+        letter-spacing: 2rem;
 
     }
 }
@@ -53,7 +52,7 @@ span {
     }
 
     100% {
-        letter-spacing: 2em;
+        letter-spacing: 2rem;
 
     }
 }
@@ -62,4 +61,13 @@ span {
     .h-custom-2 {
         height: 100%;
     }
+}
+.mousemove {
+    height: 50px;
+    width: 50px;
+    border: dotted 2px orange;
+    position: absolute;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
 }
